--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,5 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - JonathonMifsud
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - JonathonMifsud/BatchArtemisSRAMiner
